--- a/1_DataPreprocessing.ipynb
+++ b/1_DataPreprocessing.ipynb
@@ -36,7 +36,11 @@
         "\n",
         "# DATA QUALITY ##################################################################\n",
         "#print(df.head(5))\n",
-        "#print(df.columns)"
+        "#print(df.columns)\n",
+        "\n",
+        "\n",
+        "# Set flags here for output #####################################################\n",
+        "z_correlation_matrix = False"
       ]
     },
     {
@@ -513,6 +517,42 @@
       ],
       "metadata": {
         "id": "OuQnREVrA0Cu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "################################################################################################\n",
+        "# CORRELATION MATRIX to explore relationships between variables\n",
+        "# We want to see the relationship of categorical variables against the 'Customer Status' (churn) target variable\n",
+        "# https://github.com/shakedzy/dython/blob/master/docs/getting_started/examples.md\n",
+        "# 0 = no association, 1 = associated\n",
+        "################################################################################################\n",
+        "# Categorical Data\n",
+        "'''\n",
+        "if z_correlation_matrix == True:\n",
+        "    #plt.rcParams.update({'font.size': 8})\n",
+        "    corr_df_cat = df_ohed.drop(columns=['Customer ID', 'Age', 'City', 'Zip Code', 'Latitude', 'Longitude'])\n",
+        "    #corr_df_cat = df[['Gender', 'Married','City', 'Offer', 'Phone Service', 'Multiple Lines', 'Internet Type', 'Online Security', 'Online Backup', 'Device Protection Plan', 'Premium Tech Support', 'Streaming TV', 'Streaming Movies', 'Unlimited Data', 'Contract', 'Paperless Billing', 'Payment Method', 'Churn Category', 'Customer Status']]\n",
+        "    #nominal.associations(corr_df_cat, nominal_columns = 'auto', figsize=(15, 15), annot =True)\n",
+        "\n",
+        "    # Your data should be a pandas dataframe for this example\n",
+        "    corr_matrix = corr_df_cat.corr()\n",
+        "    matrix = corr_matrix[\"Customer Status\"].sort_values(ascending=False)\n",
+        "    # why does the above turn Customer Status into nan?\n",
+        "    #matrix = matrix.unstack()\n",
+        "    matrix = matrix[abs(matrix) >= 0]\n",
+        "\n",
+        "    # sideways bar chart of anything\n",
+        "\n",
+        "    corr_matrix.to_csv('correlation_matrix.csv')\n",
+        "    print(matrix.head(25))\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "-XdskQq6ELba"
       },
       "execution_count": null,
       "outputs": []
